--- a/.github/workflows/ci-iac.yml
+++ b/.github/workflows/ci-iac.yml
@@ -29,6 +29,6 @@ jobs:
           hide-progress: false
           format: 'table'
           exit-code: '1'
-          ignore-unfixed: false
+          ignore-unfixed: true
           severity: 'MEDIUM,HIGH,CRITICAL'
           #comentario
