--- a/.github/workflows/ci-iac.yml
+++ b/.github/workflows/ci-iac.yml
@@ -32,3 +32,22 @@ jobs:
           ignore-unfixed: true
           severity: 'MEDIUM,HIGH,CRITICAL'
           #comentario
+
+  insecure-cf:
+    name: Scan Insecure Cloudformation patterns
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Insecure Cloudformation patterns
+        uses: stelligent/cfn_nag@master
+        with:
+          input_path: cfn
+          extra_args: --fail-on-warnings
+
+      - name: Fail if cfn_nag scan contains failures, warnings
+        # sum cfn_nag failures, warnigns and return it as exit code
+        run: |
+        # lee en un log cfn_nag.out las las palabras Failures y Warnings a través del comando grep, si encuentra estas palabras, realiza una suma de cuantos errores encuentra, si esta suma da > 0 lanza un exit.
+          exit `grep -E '^(Failures|Warnings)' cfn_nag.out | awk '{ SUM += $3} END { print SUM }'`
