--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           REGISTRY: ghcr.io
           IMAGE_NAME: ${{ github.repository }}
-          ECR_REPOSITORY: ${{ github.repository }}
+          ECR_REPOSITORY: 'JMoralesGomez/LaboratorioFinal'
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
           echo REGISTRY: $REGISTRY
