--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -28,23 +28,6 @@ jobs:
         with: 
           fail_on_warnings: "no"
 
-  stages {
-    stage('Vulnerability scan') {
-      environment {
-        DEBRICKED_TOKEN = credentials('dd128873c7cfc3d4da7a921d87f02fe07348564a2fe5bd46')
-      }
-      agent {
-        docker {
-          image 'debricked/debricked-cli'
-          args '--entrypoint="" -v ${WORKSPACE}:/data -w /data'
-        }
-      }
-      steps {
-        sh 'bash /home/entrypoint.sh debricked:scan "" "$DEBRICKED_TOKEN" example-jenkins "$GIT_COMMIT" null cli'
-      }
-    }
-  }
-
   docker-grype-project:
     name: Grype (Anchore) Project Scan
     needs: [gitleaks]
@@ -129,6 +112,17 @@ jobs:
           exit-code: '0'
           ignore-unfixed: false
           severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
+
+name: Debricked scan
+on: [push]
+jobs:
+  vulnerabilities-scan:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: debricked/actions/skip-scan@v1 # Only use if you want to use skip scan
+      env:
+        DEBRICKED_TOKEN: ${{ secrets.dd128873c7cfc3d4da7a921d87f02fe07348564a2fe5bd46}}
 
   docker-grype:
     name: Grype (Anchore) Docker Scan
